--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit DS3502@^1.0.3
 	adafruit/Adafruit SSD1306@^2.5.11
+	milesburton/DallasTemperature@^3.11.0
